# registrationDiscordBot

./: README.md  pyproject.toml
src/: bot.py  courses.py  loader.py  tracking.py
